# My-Render

./: CMakeLists.txt  README.md  math_utils.hpp  matrix.hpp  test.cpp  vectors.hpp
script/: render_xiaokong.sh
src/: camera.cpp  camera.hpp  macro.hpp  main.cpp  material.cc  material.cpp  material.hh  material.hpp  math_utils.hh  math_utils.hpp  matrix.hpp  model.cc  model.cpp  model.hh  model.hpp  phong_shader.cpp  phong_shader.hpp  pipeline.cpp  pipeline.hpp  png_image.cc  png_image.cpp  png_image.hh  png_image.hpp  shader.hpp  util.cpp  util.hpp  window.cpp  window.hpp
